CMS7-5141  Code should not invoke inefficient number construction; use static valueOf instead